# symbolic_polynomials

./: .travis.yml  Cargo.toml  Cargo.toml~  README.md  deploy-ghpages.sh  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/ops/: trait.Add.js  trait.Div.js  trait.Mul.js  trait.Neg.js  trait.Sub.js
src/: lib.rs
src/symbolic_polynomials/: lib.rs.html
symbolic_polynomials/: constant.DEFAULT_VARIABLES.html  index.html  sidebar-items.js  struct.SymMonomial.html  struct.SymPolynomial.html
tests/: example.rs  example.rs~
