[package]
name = "symbolic_polynomials"
version = "0.0.2"
authors = ["Alexander Botev <botevmg@gmail.com>"]
description = "A package for manipulation of symbolic polynomials over the integers"
documentation = "http://botev.github.io/symbolic_polynomials/index.html"
homepage = "https://github.com/Botev/symbolic_polynomials"
repository = "https://github.com/Botev/symbolic_polynomials"
readme = "README.md"
keywords = ["math","symbolic","polynomial"]
license = "GPL-3.0+"

[lib]
name = "symbolic_polynomials"
path = "src/lib.rs"
doctest = true
